# NX3PSUMK1-FWv1

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  app-flash_args  cmake_install.cmake  config.env  flash.sh  flash.sh~  flash_args.in  flash_project_args  flasher_args.json  fullflash.sh~  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  makefs.sh  monitor.sh  monitor.sh~  otadata-flash_args  partitions.csv  partitions.csv~  project_description.json  sdkconfig  sdkconfig.old
bootloader-prefix/tmp/: bootloader-cfgcmd.txt
components/MCP7940/: CMakeLists.txt  CMakeLists.txt~
components/MCP7940/include/: MCP7940.h~
components/pca9633/: CMakeLists.txt  pca9633.cpp  pca9633.h
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp-idf/: Makefile  cmake_install.cmake
esp-idf/ADS1X15/: Makefile  cmake_install.cmake
esp-idf/ArduinoJson/: Makefile  cmake_install.cmake
esp-idf/AsyncTCP/: Makefile  cmake_install.cmake
esp-idf/ESPAsyncWebServer/: Makefile  cmake_install.cmake
esp-idf/MCP7940/: Makefile  cmake_install.cmake
esp-idf/app_trace/: Makefile  cmake_install.cmake
esp-idf/app_update/: Makefile  cmake_install.cmake  otadata-flash_args.in
esp-idf/arduino/: Makefile  cmake_install.cmake
esp-idf/asio/: Makefile  cmake_install.cmake
esp-idf/bootloader/: Makefile  cmake_install.cmake
esp-idf/bootloader_support/: Makefile  cmake_install.cmake
esp-idf/bt/: Makefile  (+1 more)
main/: CMakeLists.txt  FreeRTOS.cpp  hello_world_main.cpp~  main.cpp
main/include/: d9-semaphore.h  delta9FW-CONSTS.h  delta9FW-littlefs.h  profile_settings.h
main/include/tasks/: output.h  provisioning.h  rtc.h  status.h  taskadc.h  wifi.h  worker.h
main/modes/diagnostics/: cmd_adc.cpp  cmd_adc.h  cmd_files.cpp  cmd_files.h  cmd_i2c.cpp  cmd_i2c.h  cmd_output.cpp  cmd_output.h  cmd_prov.cpp  cmd_prov.h  cmd_rtc.cpp  cmd_rtc.h  cmd_wifi.cpp  cmd_wifi.h  diagnostics_main.cpp
main/modes/include/: diagnostics_main.h  production_main.h  setup_main.h
main/modes/production/: production_main.cpp
main/modes/setup/: setup_main.cpp
main/tasks/: adc.cpp  output.cpp  provisioning.cpp  rtc.cpp  status.cpp  wifi.cpp  worker.cpp
main/util/: wifi_getAPjson.cpp  wifi_getAPjson.h
(+249 files in other folders)
