idf_component_register(SRCS "main.cpp" 
							"FreeRTOS.cpp"
							"tasks/provisioning.cpp"
							 "tasks/rtc.cpp"
							 "tasks/status.cpp"
							 "tasks/wifi.cpp"
							 "tasks/output.cpp"
							 "tasks/adc.cpp"
							 "tasks/worker.cpp"
							 "modes/production/production_main.cpp"
							 "modes/setup/setup_main.cpp"
							 "modes/diagnostics/diagnostics_main.cpp"
							 "modes/diagnostics/cmd_rtc.cpp"    
							 "modes/diagnostics/cmd_i2c.cpp"
							 "modes/diagnostics/cmd_wifi.cpp"
							 "modes/diagnostics/cmd_files.cpp"
							 "modes/diagnostics/cmd_prov.cpp"
							 "modes/diagnostics/cmd_adc.cpp"
							 "modes/diagnostics/cmd_output.cpp"
                    INCLUDE_DIRS ""
                    "include"
                    "include/tasks"
                    "modes/include/"
                    "../libraries/json-src/include/nlohmann"
                    )
